feat: add image embeds

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ dependencies = [
     "fastapi>=0.104.1",
     "uvicorn[standard]>=0.24.0.post1",
     "aiohttp>=3.9.0",
+    "beautifulsoup4>=4.12.2",
 ]
 requires-python = ">=3.10"
 
