--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,5 @@ dependencies = [
     "aiohttp>=3.9.0",
     "beautifulsoup4>=4.12.2",
 ]
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.11"
 
